# bar_leaderboard

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  README_DEPLOYMENT.md  REFACTORING_SUMMARY.md  REORGANIZATION_COMPLETE.md  app.py  debug_test.html  nation_ranking_pipeline.py  pyproject.toml  requirements.txt  run_all_pipelines.py  run_leaderboard.py  run_nation_rankings.py  run_pipeline_local.sh  run_pipelinev2.py  run_team_analysis.py  team_analysis.py  upload_to_pythonanywhere.sh  wsgi.py
config/: config.example.yaml
data/: player_contributions.csv  player_nationalities.csv  players_data.csv  players_data.xlsx  solar.csv  unit_stats_with_names.csv
docs/: ENHANCED_FEATURES.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md
scripts/: test.py
src/: __init__.py
src/core/: __init__.py  config.py  config_manager.py
src/monitoring/: __init__.py  data_validation.py  performance_monitoring.py
src/pipelines/: __init__.py  nation_ranking_pipeline.py  run_all_pipelines.py  run_pipelinev2.py  team_analysis.py
src/web/: __init__.py  app.py
static/css/: styles.css
static/js/: nation-rankings.js
templates/: base.html  index.html  nation_rankings.html  network_visualization.html  team_rankings.html
